--- a/languages/periodical-widget-visibility-es_ES.po
+++ b/languages/periodical-widget-visibility-es_ES.po
@@ -6,12 +6,12 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://wordpress.org/plugins/periodical-widget-"
 "visibility\n"
 "POT-Creation-Date: 2017-03-02 15:01+0100\n"
-"PO-Revision-Date: 2018-06-22 18:15+0200\n"
-"Language-Team: Martin Stehle <m.stehle@gmx.de>\n"
+"PO-Revision-Date: 2021-02-18 21:56+0000\n"
+"Language-Team: Spanish (Spain)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.8\n"
+"X-Generator: Loco https://localise.biz/\n"
 "X-Poedit-KeywordsList: __;_e;_n;_x;esc_html_e;esc_html__;esc_attr_e;"
 "esc_attr__;_ex:1,2c;_nx:4c,1,2;_nx_noop:4c,1,2;_x:1,2c;_n:1,2\n"
 "X-Poedit-Basepath: ..\n"
@@ -20,6 +20,11 @@ msgstr ""
 "Language: es_ES\n"
 "X-Poedit-SearchPath-0: .\n"
 
+#: admin/class-periodical-widget-visibility-admin.php:118
+msgid "Close scheduler"
+msgstr "Cierra programador"
+
+#. Description of the plugin
 #: admin/class-periodical-widget-visibility-admin.php:82
 msgid ""
 "Control the periodical visibility of each widget based on weekdays within a "
@@ -28,27 +33,59 @@ msgstr ""
 "Configure fácilmente la visibilidad de cada widget por año y día de la "
 "semana."
 
-#: admin/class-periodical-widget-visibility-admin.php:117
-#: admin/partials/formfields.php:53
-msgid "Open scheduler"
-msgstr "Abrir programador"
-
-#: admin/class-periodical-widget-visibility-admin.php:118
-msgid "Close scheduler"
-msgstr "Cierra programador"
-
-#: admin/class-periodical-widget-visibility-admin.php:161
-#, php-format
-msgid ""
-"Welcome to Periodical Widget Visibility! You can set the time based "
-"visibility in each widget on the page %s."
-msgstr ""
-"¡Bienvenido a la Visibilidad periódica de widgets! Puede establecer la "
-"visibilidad basada en la hora en cada widget de la página %s."
+#: admin/class-periodical-widget-visibility-admin.php:200
+msgid "fifth"
+msgstr "cinco"
 
 #: admin/class-periodical-widget-visibility-admin.php:196
 msgid "first"
 msgstr "primer"
+
+#: admin/class-periodical-widget-visibility-admin.php:199
+msgid "fourth"
+msgstr "cuarto"
+
+#: admin/partials/formfields.php:41
+msgid "from"
+msgstr "desde"
+
+#. URI of the plugin
+msgid "https://wordpress.org/plugins/periodical-widget-visibility/"
+msgstr "https://wordpress.org/plugins/periodical-widget-visibility/"
+
+#. Author URI of the plugin
+msgid "https://www.kybernetik-services.com/"
+msgstr "https://www.kybernetik-services.com/"
+
+#. Author of the plugin
+msgid "Kybernetik Services"
+msgstr "Kybernetik Services"
+
+#: admin/class-periodical-widget-visibility-admin.php:201
+msgid "last"
+msgstr "último"
+
+#: admin/partials/formfields.php:42 admin/partials/formfields.php:46
+msgid "of month"
+msgstr "del mes"
+
+#: admin/partials/formfields.php:26
+msgid "on"
+msgstr "en"
+
+#: admin/class-periodical-widget-visibility-admin.php:117
+#: admin/partials/formfields.php:52
+msgid "Open scheduler"
+msgstr "Abrir programador"
+
+#: admin/partials/formfields.php:39
+msgid "Period in year:"
+msgstr "Período en el año:"
+
+#. Name of the plugin
+#: admin/partials/formfields.php:17
+msgid "Periodical Widget Visibility"
+msgstr "Visibilidad periódica de widgets"
 
 #: admin/class-periodical-widget-visibility-admin.php:197
 msgid "second"
@@ -58,46 +95,15 @@ msgstr "segundo"
 msgid "third"
 msgstr "tercer"
 
-#: admin/class-periodical-widget-visibility-admin.php:199
-msgid "fourth"
-msgstr "cuarto"
-
-#: admin/class-periodical-widget-visibility-admin.php:200
-msgid "fifth"
-msgstr "cinco"
-
-#: admin/class-periodical-widget-visibility-admin.php:201
-msgid "last"
-msgstr "último"
-
-#: admin/partials/formfields.php:17
-msgid "Periodical Widget Visibility"
-msgstr "Visibilidad periódica de widgets"
-
-#: admin/partials/formfields.php:26
-msgid "on"
-msgstr "en"
-
-#: admin/partials/formfields.php:39
-msgid "Period in year:"
-msgstr "Período en el año:"
-
-#: admin/partials/formfields.php:41
-msgid "from"
-msgstr "desde"
-
-#: admin/partials/formfields.php:42 admin/partials/formfields.php:46
-msgid "of month"
-msgstr "del mes"
-
 #: admin/partials/formfields.php:45
 msgid "to"
 msgstr "a"
 
-#: admin/partials/formfields.php:51
-msgid "Do you need more options?"
-msgstr "¿Necesita más opciones?"
-
-#: admin/partials/formfields.php:51
-msgid "Get the Pro version."
-msgstr "Obtener la versión Pro."
+#: admin/class-periodical-widget-visibility-admin.php:161
+#, php-format
+msgid ""
+"Welcome to Periodical Widget Visibility! You can set the time based "
+"visibility in each widget on the page %s."
+msgstr ""
+"¡Bienvenido a la Visibilidad periódica de widgets! Puede establecer la "
+"visibilidad basada en la hora en cada widget de la página %s."
