--- a/languages/periodical-widget-visibility.pot
+++ b/languages/periodical-widget-visibility.pot
@@ -1,42 +1,89 @@
 # Copyright (C) 2014
 # This file is distributed under the same license as the plugin package.
+#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Periodical Widget Visibility\n"
-"Report-Msgid-Bugs-To: http://wordpress.org/plugins/periodical-widget-visibility\n"
-"POT-Creation-Date: 2017-03-02 15:01+0100\n"
-"PO-Revision-Date: 2017-03-02 15:02+0100\n"
+"Report-Msgid-Bugs-To: http://wordpress.org/plugins/periodical-widget-"
+"visibility\n"
+"POT-Creation-Date: 2021-02-18 21:55+0000\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Language-Team: Martin Stehle <m.stehle@gmx.de>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.11\n"
+"X-Generator: Loco https://localise.biz/\n"
 "X-Poedit-KeywordsList: __;_e;_n;_x;esc_html_e;esc_html__;esc_attr_e;"
 "esc_attr__;_ex:1,2c;_nx:4c,1,2;_nx_noop:4c,1,2;_x:1,2c;_n:1,2\n"
 "X-Poedit-Basepath: ..\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
 "X-Poedit-SearchPath-0: .\n"
-
-#: admin/class-periodical-widget-visibility-admin.php:82
-msgid "Control the periodical visibility of each widget based on weekdays within a yearly time period easily."
-msgstr ""
-
-#: admin/class-periodical-widget-visibility-admin.php:117
-#: admin/partials/formfields.php:53
-msgid "Open scheduler"
-msgstr ""
+"\n"
+"Language: "
 
 #: admin/class-periodical-widget-visibility-admin.php:118
 msgid "Close scheduler"
 msgstr ""
 
-#: admin/class-periodical-widget-visibility-admin.php:161
-#, php-format
-msgid "Welcome to Periodical Widget Visibility! You can set the time based visibility in each widget on the page %s."
+#. Description of the plugin
+#: admin/class-periodical-widget-visibility-admin.php:82
+msgid ""
+"Control the periodical visibility of each widget based on weekdays within a "
+"yearly time period easily."
+msgstr ""
+
+#: admin/class-periodical-widget-visibility-admin.php:200
+msgid "fifth"
 msgstr ""
 
 #: admin/class-periodical-widget-visibility-admin.php:196
 msgid "first"
+msgstr ""
+
+#: admin/class-periodical-widget-visibility-admin.php:199
+msgid "fourth"
+msgstr ""
+
+#: admin/partials/formfields.php:41
+msgid "from"
+msgstr ""
+
+#. URI of the plugin
+msgid "https://wordpress.org/plugins/periodical-widget-visibility/"
+msgstr ""
+
+#. Author URI of the plugin
+msgid "https://www.kybernetik-services.com/"
+msgstr ""
+
+#. Author of the plugin
+msgid "Kybernetik Services"
+msgstr ""
+
+#: admin/class-periodical-widget-visibility-admin.php:201
+msgid "last"
+msgstr ""
+
+#: admin/partials/formfields.php:42 admin/partials/formfields.php:46
+msgid "of month"
+msgstr ""
+
+#: admin/partials/formfields.php:26
+msgid "on"
+msgstr ""
+
+#: admin/class-periodical-widget-visibility-admin.php:117
+#: admin/partials/formfields.php:52
+msgid "Open scheduler"
+msgstr ""
+
+#: admin/partials/formfields.php:39
+msgid "Period in year:"
+msgstr ""
+
+#. Name of the plugin
+#: admin/partials/formfields.php:17
+msgid "Periodical Widget Visibility"
 msgstr ""
 
 #: admin/class-periodical-widget-visibility-admin.php:197
@@ -47,46 +94,13 @@ msgstr ""
 msgid "third"
 msgstr ""
 
-#: admin/class-periodical-widget-visibility-admin.php:199
-msgid "fourth"
-msgstr ""
-
-#: admin/class-periodical-widget-visibility-admin.php:200
-msgid "fifth"
-msgstr ""
-
-#: admin/class-periodical-widget-visibility-admin.php:201
-msgid "last"
-msgstr ""
-
-#: admin/partials/formfields.php:17
-msgid "Periodical Widget Visibility"
-msgstr ""
-
-#: admin/partials/formfields.php:26
-msgid "on"
-msgstr ""
-
-#: admin/partials/formfields.php:39
-msgid "Period in year:"
-msgstr ""
-
-#: admin/partials/formfields.php:41
-msgid "from"
-msgstr ""
-
-#: admin/partials/formfields.php:42 admin/partials/formfields.php:46
-msgid "of month"
-msgstr ""
-
 #: admin/partials/formfields.php:45
 msgid "to"
 msgstr ""
 
-#: admin/partials/formfields.php:51
-msgid "Do you need more options?"
-msgstr ""
-
-#: admin/partials/formfields.php:51
-msgid "Get the Pro version."
+#: admin/class-periodical-widget-visibility-admin.php:161
+#, php-format
+msgid ""
+"Welcome to Periodical Widget Visibility! You can set the time based "
+"visibility in each widget on the page %s."
 msgstr ""
